--- a/templates/footer.html
+++ b/templates/footer.html
@@ -36,7 +36,7 @@
   <div class="container text-center">
     <div class="row align-items-center">
       <div class="col-md-4 text-lg-left">
-        <img src="{% static 'img/binblogger.png' %}" alt="BinBlogger Logo" width="200">
+        <img src="{% static 'img/boomer.png' %}" alt="BinBlogger Logo" width="200">
       </div>
 
       <div class="col-md-4 text-center">
