--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
         <li class="list-inline-item"><a class="reset-anchor" href="#"><i class="fab fa-instagram text-primary"></i></a></li>
         <li class="list-inline-item"><a class="reset-anchor" href="#"><i class="fab fa-linkedin text-primary"></i></a></li>
       </ul>
-      <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/binblogger.png' %}" alt="BinBlogger" width="190"></a>
+      <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/boomer.png' %}" alt="BinBlogger" width="190"></a>
       <a class="reset-anchor text-small mb-0 h6 d-none d-lg-block" href="mailto:nobinkhan.me@gmail.com">
        <small><i class="far fa-envelope mr-2"></i>nobinkhan.me@gmail.com</small> </a>
     </div>
